# awesome-cpp

./: .bazelrc  .gitignore  Dockerfile  README.md  WORKSPACE
.devcontainer/: devcontainer.json
awesome-cpp/: object_pool.cpp
awesome-cpp/algorithm_library/: next_permutation.cpp
awesome-cpp/apps/: CMakeLists.txt  main.cpp
awesome-cpp/apps/HalideTutorials/: CMakeLists.txt  build.sh  main.cpp
awesome-cpp/apps/tests/: CMakeLists.txt  README.md  test_sum.cpp
awesome-cpp/cache/: false-sharing-example.cpp
awesome-cpp/container/: string.cpp  tuple.cpp  vector.cpp
awesome-cpp/coroutine/: test.cpp  test2.cpp
awesome-cpp/design_patterns/: README.md  asm.cpp
awesome-cpp/file_system/: README.md
awesome-cpp/functions/: function_object.md  lambda.md  std__function.md
awesome-cpp/hash/: BUILD  priority_queue_example.cpp
awesome-cpp/memory/: test_enable_shared_from_this.cpp
awesome-cpp/multithread-programming/: thread.cpp
awesome-cpp/neon/: README.md  test.cpp  vector_mul_add.cpp
awesome-cpp/numerics/: random.cpp
awesome-cpp/parallel_programming/: arm_neon.md  matrix.cpp
awesome-cpp/string/: split.cpp  string_view.cpp  strip.cpp  substr.cpp
awesome-cpp/template/: math.cpp  tempCodeRunnerFile.cpp  type_traits_example.cpp
awesome-cpp/thread/: BUILD  thread-example.cpp
awesome-cpp/utilities/: execution_time.cpp  execution_time.md  smart_pointer.md
awesome_cpp/hash/: custom_hash.cpp
awesome_cpp/static_allocator/: BUILD  object_pool.hpp  static_allocator.hpp  (+2 more)
docs/: CMakeLists.txt  attribute.cpp  casting.cpp  code_template.cpp  type_alias.cpp
(+8 files in other folders)
